# django-continuous-delivery

./: .bandit  .checkov.yaml  .gitignore  .pre-commit-config.yaml  .watchmanconfig  Dockerfile  Makefile  README.md  bootstrap.py  cookiecutter.json  pyproject.toml  requirements.in  requirements.ini  requirements.txt  setup.cfg  setup.py  start.py
bootstrap/: collector.py  constants.py  helpers.py  runner.py
hooks/: post_gen_project.py  pre_gen_project.py
requirements/: common.in  common.txt  local.in  local.txt  remote.txt  test.in  test.txt
terraform/: main.tf  variables.tf
tests/: test_collector.py  test_helpers.py  utils.py
{{cookiecutter.project_dirname}}/: .checkov.yaml  .dockerignore  .env.tpl  .env_template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  gunicorn.conf.py  manage.py  pyproject.toml  setup.cfg  tasks.py
{{cookiecutter.project_dirname}}/features/steps/: __init__.py
{{cookiecutter.project_dirname}}/k8s/development/: 1_backend.yaml  1_volumes.yaml  2_backend.yaml  backend.yaml
{{cookiecutter.project_dirname}}/k8s/integration/: 1_backend.yaml  1_volumes.yaml  2_backend.yaml  backend.yaml
{{cookiecutter.project_dirname}}/k8s/production/: 1_backend.yaml  1_volumes.yaml  2_backend.yaml  backend.yaml
{{cookiecutter.project_dirname}}/pact/: handler.py
{{cookiecutter.project_dirname}}/pacts/: __init__.py  handler.py  verify_pacts.py
{{cookiecutter.project_dirname}}/requirements/: base.in  common.in  common.ini  common.txt  dev.in  dev.ini  dev.txt  local.in  local.ini  local.txt  prod.in  prod.ini  prod.txt  remote.in  test.in  tests.in  tests.ini  tests.txt
{{cookiecutter.project_dirname}}/scripts/: behave.sh  check.sh  ci_pact.sh  ci_sentry.sh  coverage.sh  deploy.sh  entrypoint.sh  entrypoint_local.sh  pact_verify.sh  report.sh  sentry.sh  test.sh  trivy.sh
{{cookiecutter.project_dirname}}/terraform/: main.tf  variables.tf
{{cookiecutter.project_dirname}}/terraform/digitalocean-k8s/: main.tf  variables.tf
{{cookiecutter.project_dirname}}/terraform/modules/kubernetes/cronjob/: main.tf  variables.tf
{{cookiecutter.project_dirname}}/terraform/modules/kubernetes/deployment/: main.tf  outputs.tf  variables.tf
{{cookiecutter.project_dirname}}/terraform/other-k8s/: main.tf  variables.tf
{{cookiecutter.project_dirname}}/terraform/vars/: .tfvars
{{cookiecutter.project_dirname}}/tests/: verify_pacts.py
{{cookiecutter.project_dirname}}/uwsgiconf/: docker.ini  global.ini  local.ini  static.ini
{{cookiecutter.project_dirname}}/uwsgiconf/local/: global.ini  standalone.ini.tpl  static.ini  vassal.ini.tpl
{{cookiecutter.project_dirname}}/{{cookiecutter.django_settings_dirname}}/: __init__.py  asgi.py  settings.py  urls.py  urls_apibrowser.py  views.py  workers.py  wsgi.py
{{cookiecutter.project_dirname}}/{{cookiecutter.django_settings_dirname}}/tests/: __init__.py  test_api_health.py  test_views.py
{{cookiecutter.project_dirname}}/{{cookiecutter.project_dirname}}/: asgi.py  settings.py  wsgi.py
{{cookiecutter.project_dirname}}/{{cookiecutter.project_slug}}/: __init__.py  asgi.py  settings.py  urls.py  workers.py  wsgi.py
(+6 files in other folders)
