[coverage:run]
branch = True
omit =
    .tox/*
    .venv/*
    */asgi.py
    */migrations/*
    */tests/*
    */wsgi.py
    manage.py
source = .

[flake8]
exclude =
    __pycache__,
    .git,
    .mypy_cache,
    .pytest_cache,
    .tox,
    .venv,
    .vscode,
    */migrations/*,
ignore = E501,T499,W503
max-line-length = 80
mypy_config = setup.cfg
select = B,C,D,E,F,I,W,T4,B9

[metadata]
license-file = LICENSE.md

[mypy]
ignore_missing_imports=True

[testenv:coverage]
commands =
    pip-sync {toxinidir}/requirements/tests.txt
    coverage run --concurrency=multiprocessing {toxinidir}/manage.py test --noinput --parallel --reverse
    coverage combine
commands_pre =
    black --check .
    isort --check .
    flake8
    mypy .
deps = -r{toxinidir}/requirements/tests.txt
passenv =
    DATABASE_URL
setenv =
    DJANGO_CONFIGURATION=Testing
    DJANGO_SETTINGS_MODULE={{cookiecutter.project_slug}}.settings

[testenv:report]
commands = coverage report
deps = coverage~=5.3.0

[testenv:reporthtml]
commands = coverage html
deps = coverage~=5.3.0

[testenv:reportxml]
commands = coverage xml -o test-reports/coverage.xml
deps = coverage~=5.3.0

[tool:pytest]
DJANGO_CONFIGURATION=Testing
DJANGO_SETTINGS_MODULE={{cookiecutter.project_slug}}.settings

[tox:tox]
envlist = coverage
skipsdist = True
